IE issue for overflow nav

--- a/wp-content/themes/octiv2017/src/scss/module/_header.scss
+++ b/wp-content/themes/octiv2017/src/scss/module/_header.scss
@@ -46,7 +46,7 @@
 .site-header-logo {
   width: 100%;
   max-width: 150px;
-  min-height: 50px;
+  min-height: 40px;
   padding: 1rem 0;
   @include desktop {
     max-width: 185px;
@@ -66,7 +66,7 @@
   width: 100%;
   transition: all 300ms ease-in-out;
   border-top: 1px solid $mgray;
-  overflow: scroll;
+  overflow: visible;
   height: calc(100% + 500px);
   @include desktop {
     overflow: initial;
